--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<script>
+	let src = './src/components/background2.jpg';
+	let name = 'about me image';
+</script>
 <html lang="en">
 	<head>
 		<link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" >
@@ -11,3 +15,10 @@
 		<div>%sveltekit.body%</div>
 	</body>
 </html>
+<style>
+ :global(body){
+        background-color: rgba(1, 66, 243, 0.644);
+        background-image: name
+    }
+	
+</style>
