--- a/src/app.html
+++ b/src/app.html
@@ -13,12 +13,6 @@
 	</body>
 </html>
 <style>
-	body {
-	background-position: left top;
-	font-family: "Inter", sans-serif;
-	margin: 0;
-	background-repeat: no-repeat;
-	}
 	* {
 	box-sizing: border-box;
    
@@ -28,8 +22,36 @@
 	color: black;
 	}
 	:root{
-		--background: #ecebe8;
-	}
+	--background: #ecebe8;
+    --sans-font:-apple-system,BlinkMacSystemFont,"Avenir Next",Avenir,"Nimbus Sans L",Roboto,Noto,"Segoe UI",Arial,Helvetica,"Helvetica Neue",sans-serif;
+    --mono-font:Consolas,Menlo,Monaco,"Andale Mono","Ubuntu Mono",monospace;
+    --bg:#fff;
+    --accent-bg:#f5f7ff;
+    --text:#212121;
+    --text-light:#585858;
+    --border:#d8dae1;
+    --accent:#0d47a1;
+    --code:#fcfcfc;
+    --preformatted:#444;
+    --marked:#ffffff;
+    --disabled:#efefef
+}
+@media (prefers-color-scheme:dark){
+    :root{
+        --bg:#212121;
+        --accent-bg:#2b2b2b;
+        --text:#dcdcdc;
+        --text-light:#ababab;
+        --border:#666;
+        --accent:#ffffff;
+        --code:#ffffff;
+        --preformatted:#ccc;
+        --disabled:#111
+    }
+    img,video{
+        opacity:.8
+    }
+}
 	nav {
 		position: sticky;
 		top: 0;
@@ -44,6 +66,58 @@
 		justify-content: space-between;
 		align-items: center;
 	}
+	html{
+    font-family:var(--sans-font);
+    scroll-behavior:smooth
+    
+    
+	}
+	
+	body{
+	background-color: #143957;
+	color: #fffefe;
+    background-image: url("./src/components/background2.jpg");     
+    background-size: inherit;
+    background-repeat: repeat;
+    font-size:1.15rem;
+    line-height:1.5;
+    display:grid;
+    grid-template-columns:1fr min(45rem,90%) 1fr;
+    margin:0
+	}
+
+	body>*{
+    grid-column:2
+	}
+
+	body>header{
+    background:var(--accent-bg);
+    border-bottom:1px solid var(--border);
+    text-align:center;
+    padding:0 .5rem 2rem .5rem;
+    grid-column:1/-1;
+    box-sizing:border-box
+	}
+
+	body>header h1{
+    max-width:1200px;
+    margin:1rem auto
+	}
+
+	body>header p{
+    max-width:40rem;
+    margin:1rem auto
+	}
+
+	main{
+    padding-top:1.5rem
+	}
+
+	body>footer{
+    margin-top:4rem;
+    padding:2rem 1rem 1.5rem 1rem;
+	}
+
 	.nav-links {
 		display: flex;
 		justify-content: flex-end;
@@ -51,6 +125,7 @@
 		margin: -1em 0;
 		flex: 1 0 auto;
 	}
+
 	.nav-links .link {
 		position: relative;
 		margin: 1em;
@@ -58,10 +133,12 @@
 		letter-spacing: 1px;
 		color: black;
 	}
+	
 	.nav-logo {
 		position: relative;
 		line-height: 1;
 		font-size: 1.1rem;
 		color: black;
 	}
+	
  </style>
