--- a/src/app.html
+++ b/src/app.html
@@ -76,7 +76,7 @@
 	body{
 	background-color: #143957;
 	color: #fffefe;
-    background-image: url("./src/components/background2.jpg");     
+    background-image: url("/src/static/background2.jpg");     
     background-size: inherit;
     background-repeat: repeat;
     font-size:1.15rem;
