--- a/src/app.html
+++ b/src/app.html
@@ -78,7 +78,7 @@
 	body{
 	background-color: #05263f;
 	color: #fffefe;
-    
+	background-image: radial-gradient(circle,#9cdcfa, rgb(5, 58, 128),#111111);
     background-size: inherit;
     background-repeat: repeat;
     font-size:1.15rem;
@@ -87,7 +87,7 @@
     grid-template-columns:1fr min(45rem,90%) 1fr;
     margin:0
 	}
-
+	
 	body>*{
     grid-column:2
 	}
