--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
 	<head>
 		
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
@@ -78,7 +78,7 @@
 	body{
 	background-color: #05263f;
 	color: #fffefe;
-	background-image: radial-gradient(circle,#9cdcfa, rgb(5, 58, 128),#111111);
+	  background-image: radial-gradient(circle,#069ac7, rgb(5, 58, 128),#111111);
     background-size: inherit;
     background-repeat: repeat;
     font-size:1.15rem;
